fix: Adjust spacing on publication page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -314,6 +314,10 @@ html[data-theme='light'] {
   color: var(--text);
 }
 
+.abstract-section p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
 /* Responsive font size for ABOUT page */
 @media (min-width: 1280px) {
